<resources>
    <string name="app_name">CAMS</string>
    <string name="student">Student</string>
    <string name="teacher">Teacher</string>
    <string name="course">Course</string>
    <string name="attendance">Attendance</string>
    <string name="logout">Logout</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="email">email</string>
    <string name="forgotPassword" />
    <string name="login">Login</string>
    <string name="doNotHaveAccountString" />
    <string name="password">password</string>

    <string-array name="loginType">
        <item>Select Login Type</item>
        <item>Admin</item>
        <item>Teacher</item>
    </string-array>

    <string-array name="selectCourse">
        <item>Select Course</item>
        <item>M107- C Sharp</item>
        <item>EL112- English</item>
    </string-array>
</resources>