<?xml version="1.0" encoding="utf-8"?>

<com.google.android.material.navigation.NavigationView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/nav_view"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:layout_gravity="start"
    android:background="@color/app_background_color"
    android:fitsSystemWindows="true">

    <androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="40dp"
                android:orientation="vertical"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="40dp">

                <TextView
                    android:id="@+id/student"
                    style="@style/regular"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@null"
                    android:fontFamily="@font/poppins_bold"
                    android:gravity="center"
                    android:padding="10sp"
                    android:text="@string/student"
                    android:textColor="@color/whitecolor"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/teacher"
                    style="@style/regular"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@null"
                    android:fontFamily="@font/poppins_bold"
                    android:gravity="center"
                    android:padding="10sp"
                    android:text="@string/teacher"

                    android:textColor="@color/whitecolor"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/course"
                    style="@style/regular"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@null"
                    android:fontFamily="@font/poppins_bold"
                    android:gravity="center"
                    android:padding="10sp"
                    android:text="@string/course"

                    android:textColor="@color/whitecolor"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/attendance"
                    style="@style/regular"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@null"
                    android:fontFamily="@font/poppins_bold"
                    android:gravity="center"
                    android:padding="10sp"
                    android:text="@string/attendance"

                    android:textColor="@color/whitecolor"
                    android:textSize="16sp"
                    android:textStyle="bold" />
                <TextView
                    android:id="@+id/home"
                    style="@style/regular"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@null"
                    android:fontFamily="@font/poppins_bold"
                    android:gravity="center"
                    android:visibility="gone"
                    android:padding="10sp"
                    android:text="Home"
                    android:textColor="@color/whitecolor"
                    android:textSize="16sp"
                    android:textStyle="bold" />
                <TextView
                    android:id="@+id/students"
                    style="@style/regular"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@null"
                    android:fontFamily="@font/poppins_bold"
                    android:gravity="center"
                    android:padding="10sp"
                    android:text="Students"
                    android:visibility="gone"
                    android:textColor="@color/whitecolor"
                    android:textSize="16sp"
                    android:textStyle="bold" />
                <TextView
                    android:id="@+id/takeAttendance"
                    style="@style/regular"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@null"
                    android:fontFamily="@font/poppins_bold"
                    android:gravity="center"
                    android:padding="10sp"
                    android:visibility="gone"
                    android:text="Take Attendance"
                    android:textColor="@color/whitecolor"
                    android:textSize="16sp"
                    android:textStyle="bold" />
                <TextView
                    android:id="@+id/viewAttendance"
                    style="@style/regular"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@null"
                    android:fontFamily="@font/poppins_bold"
                    android:gravity="center"
                    android:padding="10sp"
                    android:visibility="gone"
                    android:text="View Attendance"
                    android:textColor="@color/whitecolor"
                    android:textSize="16sp"
                    android:textStyle="bold" />
                <TextView
                    android:id="@+id/changePassword"
                    style="@style/regular"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@null"
                    android:fontFamily="@font/poppins_bold"
                    android:gravity="center"
                    android:padding="10sp"
                    android:visibility="gone"
                    android:text="Change Password"
                    android:textColor="@color/whitecolor"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/logout"
                    style="@style/regular"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@null"
                    android:fontFamily="@font/poppins_bold"
                    android:gravity="center"
                    android:padding="10sp"
                    android:text="@string/logout"

                    android:textColor="@color/whitecolor"
                    android:textSize="16sp"
                    android:textStyle="bold" />

            </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</com.google.android.material.navigation.NavigationView>
